--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-margin">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">MARVEL</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -12,16 +11,17 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div
+      class="collapse navbar-collapse justify-content-md-center"
+      id="#navbarSupportedContent"
+    >
+      <ul class="navbar-nav fw-bolder">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">HOME</a>
+          <a class="nav-link" href="#">HOME</a>
         </li>
-        <button mat-button [matMenuTriggerFor]="menu">CHARACTERS</button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>Item 1</button>
-          <button mat-menu-item>Item 2</button>
-        </mat-menu>
+        <li class="nav-item">
+          <a class="nav-link" href="#">CHARACTERS</a>
+        </li>
         <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -51,15 +51,6 @@
           <a class="nav-link" href="#">TV SHOWS</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-light" type="submit">SEARCH</button>
-      </form>
     </div>
   </div>
 </nav>
