Implemented navbar-logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <img src="./assets/Marvel_Logo.svg.png" alt="Marvel logo" class="logo" />
 <app-navbar></app-navbar>
 <app-carousel></app-carousel>
+<app-navbar-logo></app-navbar-logo>
