Implemented card, characters, routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<img src="./assets/Marvel_Logo.svg.png" alt="Marvel logo" class="logo" />
+<img
+  src="./assets/Marvel_Logo.svg.png"
+  alt="Marvel logo"
+  routerLink="/carousel"
+  class="logo"
+/>
 <app-navbar></app-navbar>
-<app-carousel></app-carousel>
+<router-outlet></router-outlet>
 <app-navbar-logo></app-navbar-logo>
 <app-footer></app-footer>
