--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,10 +17,10 @@
     >
       <ul class="navbar-nav fw-bolder">
         <li class="nav-item">
-          <a class="nav-link" href="#">HOME</a>
+          <a class="nav-link" routerLink="/carousel">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CHARACTERS</a>
+          <a class="nav-link" routerLink="/characters">CHARACTERS</a>
         </li>
         <!-- <li class="nav-item dropdown">
           <a
