--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,21 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.container-cards {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 320px;
+  object-fit: cover;
+}
+
+.card-detail {
+  width: 100px;
+}
