Created movies json and movies component

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card h-100 text-white bg-dark">
   <img [src]="item.image" class="card-img-top" alt="..." />
   <div class="card-body">
-    <p class="card-text">
+    <p class="card-text text-center">
       <strong>
         {{ item.name | uppercase }}
       </strong>
