--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -45,7 +45,7 @@
           <a class="nav-link" href="#">COMICS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">MOVIES</a>
+          <a class="nav-link" routerLink="/movies">MOVIES</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">TV SHOWS</a>
