--- a/src/app/character-details/character-details.component.html
+++ b/src/app/character-details/character-details.component.html
@@ -1,12 +1,1 @@
-<div class="container-cards">
-  <table class="table table-striped">
-    <thead>
-      <tr class="table-dark">
-        <th scope="col">{{ name }}</th>
-      </tr>
-      <tr>
-        <img [src]="characterDetails.image" />
-      </tr>
-    </thead>
-  </table>
-</div>
+<div class="container-cards"></div>
