--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -42,13 +42,13 @@
           </ul>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#">COMICS</a>
+          <a class="nav-link" routerLink="/comics">COMICS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/movies">MOVIES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">TV SHOWS</a>
+          <a class="nav-link" routerLink="/tv-shows">TV SHOWS</a>
         </li>
       </ul>
     </div>
