--- a/src/app/movie-details/movie-details.component.css
+++ b/src/app/movie-details/movie-details.component.css
@@ -5,6 +5,10 @@
   object-position: center top;
 }
 
-.img-poster {
-  max-height: 500px;
+.bold {
+  font-size: 20px;
+  font-weight: bold;
+}
+.center {
+  text-align: center;
 }
