--- a/src/app/tv-show-details/tv-show-details.component.html
+++ b/src/app/tv-show-details/tv-show-details.component.html
@@ -1,29 +1,24 @@
-<img [src]="movieDetails.background" class="img-background" />
+<img [src]="tvShowDetails.background" class="img-background" />
 
 <div class="container-cards">
   <div style="text-align: center">
     <div class="bold">OVERVIEW</div>
     <br />
-    <div>{{ movieDetails.description }}</div>
+    <div>{{ tvShowDetails.description }}</div>
     <br />
     <ul class="list-group list-group-flush">
-      <li class="list-group-item"><b>Rating:</b> {{ movieDetails.rating }}</li>
-      <li class="list-group-item"><b>Genre:</b> {{ movieDetails.genre }}</li>
       <li class="list-group-item">
-        <b>Original Language:</b> {{ movieDetails.original_language }}
+        <b>Network:</b> {{ tvShowDetails.network }}
       </li>
       <li class="list-group-item">
-        <b>Director:</b> {{ movieDetails.director }}
+        <b>Director:</b> {{ tvShowDetails.director }}
       </li>
       <li class="list-group-item">
-        <b>Producer:</b> {{ movieDetails.producer }}
+        <b>Head Writer:</b> {{ tvShowDetails.head_writer }}
       </li>
-      <li class="list-group-item"><b>Writer:</b> {{ movieDetails.writer }}</li>
+      <li class="list-group-item"><b>Cast:</b> {{ tvShowDetails.cast }}</li>
       <li class="list-group-item">
-        <b>Release Date:</b> {{ movieDetails.release_date }}
-      </li>
-      <li class="list-group-item">
-        <b>Runtime:</b> {{ movieDetails.runtime }}
+        <b>Release date:</b> {{ tvShowDetails.release_date }}
       </li>
     </ul>
   </div>
