--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,10 @@ body {
 .card-detail {
   width: 100px;
 }
+
+.img-background {
+  width: 100%;
+  object-fit: cover;
+  max-height: 500px;
+  object-position: center top;
+}
