--- a/src/app/comics-list/comics-list.component.html
+++ b/src/app/comics-list/comics-list.component.html
@@ -1,3 +1,9 @@
+<div class="background-top-comic">
+  <div class="center-title">
+    <div>{{ comic.name }}</div>
+  </div>
+</div>
+
 <div class="container-cards">
   <div class="row row-cols-1 row-cols-md-5 g-4">
     <div
