Used pipe to set year of copyright

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
 >
   <section class="d-flex justify-content-between p-4 bg-dark">
     <div class="me-5">
-      <span>&copy; 2022</span>
+      <span>&copy; {{ date | date: "yyyy" }}</span>
     </div>
     <div>
       <a
