--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,7 +1,7 @@
 <div class="container-cards">
   <div class="row row-cols-1 row-cols-md-5 g-4">
     <div
-      *ngFor="let character of characters"
+      *ngFor="let character of characters$ | async"
       routerLink="/character-details"
       [queryParams]="{ name: character.name }"
       class="col"
